# ==============================================================================
# PMFLib CMake File
# ==============================================================================

# include subdirectories -------------------------------------------------------
INSTALL(DIRECTORY
            man1
        DESTINATION
            man
        FILES_MATCHING PATTERN
            "*.1"
        )
