# ==============================================================================
# PMFLib CMake File
# ==============================================================================

# test CV derivatives ----------------------------
ADD_SUBDIRECTORY(cvder)

# test restart readers ---------------------------
ADD_SUBDIRECTORY(readers)





