# ==============================================================================
# PMFLib CMake File
# ==============================================================================

ADD_SUBDIRECTORY(distance)
ADD_SUBDIRECTORY(angle)
ADD_SUBDIRECTORY(cn)
ADD_SUBDIRECTORY(shape)
ADD_SUBDIRECTORY(pucker)
ADD_SUBDIRECTORY(na)
